--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+    testCompile 'org.easymock:easymock:3.3'
 }
 mainClassName = 'tw.com.Train'
